--- a/clickergame.html
+++ b/clickergame.html
@@ -10,7 +10,7 @@
     <h1 id="judul">Aidan Game</h1>
     <p id="skor">skor: <label id="jumlahSkor">0</label></p>
     <div class="tombol">
-    <button id="game"><strong>Klik Saya!!</strong></button>
+    <button id="game" onclick="tambah()"><strong>Klik Saya!!</strong></button>
     </div>
     <script src="clickergame.js"></script>
 </body>
