--- a/clickergame.html
+++ b/clickergame.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="clickergame.css">
 </head>
 <body>
-    <h1 id="judul">Aidan Game</h1>
+    <h1 id="judul">Clicker Game</h1>
     <p id="skor">skor: <label id="jumlahSkor">0</label></p>
     <div class="tombol">
     <button id="game" onclick="tambah()"><strong>Klik Saya!!</strong></button>
@@ -15,3 +15,4 @@
     <script src="clickergame.js"></script>
 </body>
 </html>
+
